styles/mobile.less
@mobileHeader: 300px;

@media(max-width:768px) {
  .cancel-mobile-padding {
    padding:0;
  }
  .navbar-default {
    text-align: center;
  }
  .img {
    height:@mobileHeader;
    min-height: @mobileHeader;

    position:relative;
    background-position:50% 50%;
    background-size:cover;

  }
  section {
    height:@mobileHeader;
    background-size:cover;
  }
  .header-text {
    height:@mobileHeader;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }
  .social-link-header {
    width:40%;
  }
  .support-icons {
    font-size: 2em;
  }

  .about {
    height:900px;
  }

  .support-icons {
    font-size:4em;
  }

  .bay-bash {
    min-height:55vh;
    height:500px;
  }

 .bay-bash .icon-BB {
    font-size:5em;
    display: block;
  }

  .line {
    width:50%;
  }

  .btn-outline {
    width:80%;
    padding:10px;
  }

  .hospital {
    min-height:1000px;
  }
  .sign-up {
    margin-top:30px;
  }

  .lbl-sign-up {
    width:100%;
    text-align: center;
  }

  .input-sign-up {
    text-align: center;
    width:80%!important;
    margin:10px 10%;
  }

  .btn-sign-up {
   width:80%;
   margin:0 0 10px 0;
  }

  footer {
    height:400px;
  }

  .social-link-footer .fa {
    width:20px;
    display: inline-block;
    text-align: right;
  }

  .social-link-footer span {
    width:100px;
    display: inline-block;
    text-align: left;
  }

  .social-link-footer {
    width:80%;
    height:40px;
    margin:10px auto;
    padding:5px;
    font-size:1.4em;
    display: inline-block;
  }

  .mobile-sign-up {
    display: flex!important;
    justify-content: center;
    width:  @navbar-height;
    float: right;
    height:  @navbar-height;
    font-size:1.5em;
    flex-direction: column;
    color:@red!important;
    margin-right:-15px;
  }
  .mobile-sign-up:hover {
    text-decoration: none;
    color:white!important;
  }
  .sponsors {
    min-height:650px;
  }

  .sponsor-logos {
    max-width: 100%;
  }
  .sp-logo {
    margin: 40px 0;
  }
}


@media(max-width: 320px) {

 .bay-bash .icon-BB {
    font-size:4em;
  }
}
/*
// iPhone media queries
// portrait
@media only screen
and (min-device-width : 320px)
and (max-device-width : 966px)
and (orientation : portrait) {
  .img,
  .banner {
    height:33vh;
    position:relative;
  }
  .banner-text {
    position:absolute;
    width:100%;
    margin-left:-50%;
    left:50%;
    bottom:0;
  }
  .banner-text h1 {
    font-size:26px;
  }
  .navbar-links li {
    border-left:1px solid white;
  }
  .navbar-links li:first-child {
    border:none;
  }
}

// landscape
@media only screen
and (min-device-width : 320px)
and (max-device-width : 966px)
and (orientation : landscape) {

  .banner {
    position:relative;
  }

  .img,
  .banner {
    height:100vh;
  }

  .banner-text {
    position:absolute;
    width:100%;
    margin-left:-50%;
    left:50%;
    bottom:0;
  }
  .text-child-life {
    max-height:65px;
  }

  .text-charity-care {
    max-height:105px;
  }

  .text-research {
    max-height:65px;
  }

  .text-social-services {
    max-height:105px;
  }

}
*/

